非路由方式实现组件化通讯

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,15 @@
             app:layout_constraintLeft_toRightOf="@id/btn_1"
             app:layout_constraintBottom_toBottomOf="parent"
     />
+    <Button
+            android:text="跳转到cat页面"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_jumpCat"
+            app:layout_constraintLeft_toRightOf="@id/btn_1"
+            app:layout_constraintBottom_toTopOf="@id/btn_1"
+            android:layout_marginBottom="50dp"
+    />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
