回顾一下java回调方式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,15 @@
             app:layout_constraintBottom_toTopOf="@id/btn_1"
             android:layout_marginBottom="50dp"
     />
+    <Button
+            android:text="测试回调"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_callback"
+            app:layout_constraintLeft_toRightOf="@id/btn_1"
+            app:layout_constraintTop_toTopOf="parent"
+
+    />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
